tests/error/unary_plus_on_pointers.c
// fail "Error at '+': Operand of unary '+' has to be of integer or floating point type"

int main(){
    char *arst;
    +arst;
}
